--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_feed.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_feed.xml
@@ -60,7 +60,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                 app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                 app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                app:srcCompat="@drawable/flowerpot"
+                app:srcCompat="@drawable/faces_3"
                 tools:ignore="DuplicateIds" />
 
             <TextView
@@ -176,7 +176,7 @@
                 app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                 app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                 app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                app:srcCompat="@drawable/flowerpot"
+                app:srcCompat="@drawable/faces_5"
                 tools:ignore="DuplicateIds" />
 
             <TextView
@@ -204,7 +204,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@drawable/coriander_background_milestones"
+                android:background="@drawable/strawberry_background_milestones"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
