--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friends.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_add_friends.xml
@@ -167,11 +167,11 @@
                     android:id="@+id/tv2"
                     android:layout_width="202dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="32dp"
-                    android:text="You grow 5 similar @string/add_plants"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="You grow 5 similar "
                     android:textColor="@color/colorPrimary"
                     android:textSize="10sp"
                     app:layout_constraintBottom_toBottomOf="parent"
