--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_friends.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/activity_friends.xml
@@ -30,18 +30,19 @@
     <View
         android:id="@+id/view4"
         android:layout_width="match_parent"
-        android:layout_height="6dp"
+        android:layout_height="4dp"
+        android:layout_marginTop="-2dp"
         android:background="@drawable/toolbar_drop_shadow"
         app:layout_constraintBottom_toTopOf="@+id/id_tabs"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/id_tabs" />
+        app:layout_constraintTop_toBottomOf="@+id/myFriendsToolbar" />
 
     <View
         android:id="@+id/view"
         android:layout_width="2dp"
-        android:layout_height="75dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="60dp"
         android:background="@drawable/border_navigation_bar_vertical"
         app:layout_constraintBottom_toBottomOf="@+id/id_tabs"
         app:layout_constraintEnd_toEndOf="@+id/id_tabs"
@@ -62,16 +63,15 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/id_tabs"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="53dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/myFriendsToolbar"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.013">
 
     </android.support.design.widget.TabLayout>
 
