--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_answer.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_answer.xml
@@ -6,179 +6,207 @@
     android:layout_height="match_parent"
     tools:context=".fragments.AnswerFragment">
 
-    <TextView
-        android:id="@+id/answer"
-        android:layout_width="119dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="558dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="424dp"
-        android:background="@drawable/rounded_text_view"
-        android:ems="10"
-        android:gravity="center"
-        android:text="Answer"
-        android:textColor="@color/colorWhite"
-        android:textColorHint="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.895"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
-
-    <TextView
-        android:id="@+id/pass"
-        android:layout_width="119dp"
-        android:layout_height="44dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="424dp"
-        android:background="@drawable/rounded_edit_text"
-        android:ems="10"
-        android:gravity="center"
-        android:hint="Pass"
-        android:inputType="textPassword"
-        android:textColorHint="@color/colorPrimary"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.114"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
-
-    <FrameLayout
-        android:id="@+id/frameLayout4"
-        android:layout_width="316dp"
-        android:layout_height="373dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/rounded_text_view_opacity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.104">
+        app:layout_constraintTop_toTopOf="parent">
 
-    </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="350dp">
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="See other answers (3)"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/small_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/imageView14"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
-        app:layout_constraintVertical_bias="1.0" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/imageView14"
-        android:layout_width="43dp"
-        android:layout_height="35dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_expand_more_black_24dp"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
-        app:layout_constraintVertical_bias="0.963" />
+                <TextView
+                    android:id="@+id/answer"
+                    android:layout_width="119dp"
+                    android:layout_height="44dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="424dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/rounded_text_view"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:text="Answer"
+                    android:textColor="@color/colorWhite"
+                    android:textColorHint="@color/colorPrimary"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_login"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.895"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.95" />
 
-    <TextView
-        android:id="@+id/username"
-        android:layout_width="119dp"
-        android:layout_height="27dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="Ella Rose"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/normal_text_size"
-        app:layout_constraintBottom_toTopOf="@+id/textView15"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintHorizontal_bias="0.052"
-        app:layout_constraintStart_toEndOf="@+id/imageView12"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
-        app:layout_constraintVertical_bias="1.0" />
+                <TextView
+                    android:id="@+id/pass"
+                    android:layout_width="119dp"
+                    android:layout_height="44dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="424dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/rounded_edit_text"
+                    android:ems="10"
+                    android:gravity="center"
+                    android:hint="Pass"
+                    android:inputType="textPassword"
+                    android:textColorHint="@color/colorPrimary"
+                    app:layout_constraintBottom_toTopOf="@+id/btn_login"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.114"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.95" />
 
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="119dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="44dp"
-        android:textColor="@color/colorPrimary"
-        android:text="January 2nd, 2019"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintHorizontal_bias="0.052"
-        app:layout_constraintStart_toEndOf="@+id/imageView12"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
-        app:layout_constraintVertical_bias="0.01" />
+                <FrameLayout
+                    android:id="@+id/frameLayout4"
+                    android:layout_width="316dp"
+                    android:layout_height="371dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/rounded_text_view_opacity"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.666"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.345">
 
-    <TextView
-        android:id="@+id/forum_question"
-        android:layout_width="218dp"
-        android:layout_height="45dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="My spinach plant has yellow spots on its leaf. Why is that?"
-        android:gravity="center"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
-        app:layout_constraintTop_toBottomOf="@+id/textView15"
-        app:layout_constraintVertical_bias="0.016" />
+                </FrameLayout>
 
-    <ImageView
-        android:id="@+id/imageView13"
-        android:layout_width="269dp"
-        android:layout_height="141dp"
-        android:layout_marginBottom="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:src="@drawable/coriander_background_milestones"
-        app:layout_constraintBottom_toTopOf="@+id/imageView14"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
-        app:layout_constraintTop_toBottomOf="@+id/textView1"
-        app:layout_constraintVertical_bias="0.0"
-        tools:ignore="UnknownId" />
+                <TextView
+                    android:id="@+id/textView17"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="See other answers (3)"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/small_text_size"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView14"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout4"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="1.0" />
 
-    <ImageView
-        android:id="@+id/imageView12"
-        android:layout_width="63dp"
-        android:layout_height="54dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/userpicture"
-        app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
-        app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
-        app:layout_constraintHorizontal_bias="0.063"
-        app:layout_constraintStart_toStartOf="@+id/frameLayout4"
-        app:layout_constraintTop_toTopOf="@+id/frameLayout4"
-        app:layout_constraintVertical_bias="0.0" />
+                <ImageView
+                    android:id="@+id/imageView14"
+                    android:layout_width="43dp"
+                    android:layout_height="35dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:src="@drawable/ic_expand_more_black_24dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout4"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="0.963" />
+
+                <TextView
+                    android:id="@+id/username"
+                    android:layout_width="119dp"
+                    android:layout_height="27dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="Ella Rose"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="@dimen/normal_text_size"
+                    app:layout_constraintBottom_toTopOf="@+id/textView15"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintHorizontal_bias="0.052"
+                    app:layout_constraintStart_toEndOf="@+id/imageView12"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="1.0" />
+
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="119dp"
+                    android:layout_height="27dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="44dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:text="January 2nd, 2019"
+                    android:textColor="@color/colorPrimary"
+                    app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintHorizontal_bias="0.052"
+                    app:layout_constraintStart_toEndOf="@+id/imageView12"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="0.01" />
+
+                <TextView
+                    android:id="@+id/forum_question"
+                    android:layout_width="218dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:gravity="center"
+                    android:text="My spinach plant has yellow spots on its leaf. Why is that?"
+                    android:textColor="@color/colorPrimary"
+                    app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintHorizontal_bias="0.503"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout4"
+                    app:layout_constraintTop_toBottomOf="@+id/textView15"
+                    app:layout_constraintVertical_bias="0.016" />
+
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="269dp"
+                    android:layout_height="141dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="48dp"
+                    android:src="@drawable/coriander_background_milestones"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView14"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="0.0"
+                    tools:ignore="UnknownId" />
+
+                <ImageView
+                    android:id="@+id/imageView12"
+                    android:layout_width="63dp"
+                    android:layout_height="54dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:src="@drawable/userpicture"
+                    app:layout_constraintBottom_toBottomOf="@+id/frameLayout4"
+                    app:layout_constraintEnd_toEndOf="@+id/frameLayout4"
+                    app:layout_constraintHorizontal_bias="0.063"
+                    app:layout_constraintStart_toStartOf="@+id/frameLayout4"
+                    app:layout_constraintTop_toTopOf="@+id/frameLayout4"
+                    app:layout_constraintVertical_bias="0.0" />
+
+            </android.support.constraint.ConstraintLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
