--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/layout/fragment_my_milestones.xml
@@ -31,7 +31,6 @@
         android:id="@+id/scrollView4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +49,9 @@
                     android:id="@+id/post_title"
                     android:layout_width="262dp"
                     android:layout_height="31dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="Finally harvested my coriander"
                     android:textSize="@dimen/normal_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -67,39 +66,40 @@
                     android:id="@+id/post_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="December 20th, 2018"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.134"
+                    app:layout_constraintHorizontal_bias="0.022"
                     app:layout_constraintStart_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.201"
+                    app:layout_constraintVertical_bias="0.214"
                     tools:ignore="DuplicateIds" />
 
                 <ImageView
                     android:id="@+id/imageViewPlant2"
                     android:layout_width="54dp"
                     android:layout_height="66dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/plant_circle_image6"
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                    app:srcCompat="@drawable/strawberry"
+                    app:srcCompat="@drawable/coriander"
                     tools:ignore="DuplicateIds" />
 
                 <TextView
                     android:id="@+id/plant_circle_image6"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/green_circle"
                     android:text=""
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -114,10 +114,10 @@
                     android:id="@+id/imageView10"
                     android:layout_width="348dp"
                     android:layout_height="188dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/coriander_background_milestones"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -146,9 +146,9 @@
                     android:id="@+id/like_icon2"
                     android:layout_width="29dp"
                     android:layout_height="29dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:src="@drawable/ic_favorite_black_24dp"
                     app:layout_constraintBottom_toBottomOf="@+id/likes2"
                     app:layout_constraintEnd_toEndOf="@+id/likes2"
@@ -162,8 +162,8 @@
                     android:id="@+id/textView9"
                     android:layout_width="48dp"
                     android:layout_height="29dp"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:text="15"
                     android:textColor="@color/colorDarkRed"
@@ -184,9 +184,9 @@
                     android:id="@+id/post_title"
                     android:layout_width="262dp"
                     android:layout_height="49dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="My strawberries started sprouting"
                     android:textSize="@dimen/normal_text_size"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -201,13 +201,13 @@
                     android:id="@+id/post_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:text="November 27th, 2018"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.134"
+                    app:layout_constraintHorizontal_bias="0.022"
                     app:layout_constraintStart_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.201"
@@ -217,23 +217,24 @@
                     android:id="@+id/imageViewPlant2"
                     android:layout_width="54dp"
                     android:layout_height="66dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/plant_circle_image6"
                     app:layout_constraintEnd_toEndOf="@+id/plant_circle_image6"
                     app:layout_constraintStart_toStartOf="@+id/plant_circle_image6"
                     app:layout_constraintTop_toTopOf="@+id/plant_circle_image6"
-                    app:srcCompat="@drawable/coriander"
+                    app:srcCompat="@drawable/strawberry"
                     tools:ignore="DuplicateIds" />
 
                 <TextView
                     android:id="@+id/plant_circle_image6"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/green_circle"
                     android:text=""
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -248,10 +249,10 @@
                     android:id="@+id/imageView10"
                     android:layout_width="348dp"
                     android:layout_height="188dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:background="@drawable/coriander_background_milestones"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -280,9 +281,9 @@
                     android:id="@+id/like_icon2"
                     android:layout_width="29dp"
                     android:layout_height="29dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:src="@drawable/ic_favorite_black_24dp"
                     app:layout_constraintBottom_toBottomOf="@+id/likes2"
                     app:layout_constraintEnd_toEndOf="@+id/likes2"
@@ -296,8 +297,8 @@
                     android:id="@+id/textView9"
                     android:layout_width="48dp"
                     android:layout_height="29dp"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     android:gravity="center"
                     android:text="15"
                     android:textColor="@color/colorDarkRed"
